--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,8 @@ colorama==0.2.5
 configobj==4.7.2
 decorator==3.4.0
 dj-static==0.0.6
+django-ckeditor==5.4.0
+django-js-asset==0.1.1
 django-shortuuidfield==0.1.3
 duplicity==0.6.23
 html5lib==0.999
