--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,5 @@
+boto3==1.6.2
+botocore==1.9.2
 certifi==2018.1.18
 chardet==3.0.4
 dj-database-url==0.4.2
@@ -6,9 +8,12 @@ django-ckeditor==5.4.0
 django-heroku==0.1.0
 django-js-asset==1.0.0
 django-shortuuidfield==0.1.3
+django-storages==1.6.5
+docutils==0.14
 flake8==3.5.0
 gunicorn==19.7.1
 idna==2.6
+jmespath==0.9.3
 mccabe==0.6.1
 pew==1.1.2
 Pillow==5.0.0
@@ -16,8 +21,10 @@ pipenv==9.1.0
 psycopg2==2.7.3.2
 pycodestyle==2.3.1
 pyflakes==1.6.0
+python-dateutil==2.6.1
 pytz==2017.3
 requests==2.18.4
+s3transfer==0.1.13
 shortuuid==0.5.0
 six==1.11.0
 urllib3==1.22
