--- a/.env
+++ b/.env
@@ -2,3 +2,5 @@ TIMES=2
 AWS_ACCESS_KEY_ID=AKIAJWTFNSFXM4FPYUTQ
 AWS_SECRET_ACCESS_KEY=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
 S3_BUCKET_NAME=mydidata
+ENABLE_TEAM_LINK=True
+ENABLE_TEAM_LINK=False
