--- a/.env
+++ b/.env
@@ -4,3 +4,6 @@ AWS_SECRET_ACCESS_KEY=QYc2X6whcyiN4KB6wpp96g3A2P3TK1HUOO10rNkp
 S3_BUCKET_NAME=mydidata
 ENABLE_TEAM_LINK=True
 ENABLE_TEAM_LINK=False
+S3_BUCKET_NAME=mydidata2
+AWS_ACCESS_KEY_ID=AKIAJY6TTK5EZW4UXMLQ
+AWS_SECRET_ACCESS_KEY=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
