--- a/bkp.env
+++ b/bkp.env
@@ -7,3 +7,4 @@ ENABLE_TEAM_LINK=False
 S3_BUCKET_NAME=mydidata2
 AWS_ACCESS_KEY_ID=AKIAJY6TTK5EZW4UXMLQ
 AWS_SECRET_ACCESS_KEY=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
+AWS_STORAGE_BUCKET_NAME=mydidata2
