--- a/Pipfile
+++ b/Pipfile
@@ -14,7 +14,7 @@ certifi = "==2018.1.18"
 chardet = "==3.0.4"
 colorama = "==0.3.7"
 dj-database-url = "==0.4.2"
-Django = "==2.0.2"
+django = "==2.0.2"
 django-ckeditor = "==5.4.0"
 django-heroku = "==0.2.0"
 django-js-asset = "==1.0.0"
@@ -29,7 +29,7 @@ idna = "==2.6"
 jmespath = "==0.9.3"
 mccabe = "==0.6.1"
 pew = "==1.1.2"
-Pillow = "==5.0.0"
+pillow = "==5.0.0"
 pipenv = "==9.1.0"
 psycopg2 = "==2.7.4"
 pyasn1 = "==0.4.2"
@@ -38,18 +38,19 @@ pyflakes = "==1.6.0"
 python-dateutil = "==2.6.1"
 python-http-client = "==3.2.6"
 pytz = "==2018.3"
-PyYAML = "==3.12"
+pyyaml = "==3.12"
 requests = "==2.18.4"
 rsa = "==3.4.2"
 s3transfer = "==0.3.3"
 selenium = "==3.14.0"
 sendgrid = "==6.2.0"
 shortuuid = "==0.5.0"
-Unidecode = "==1.0.23"
+unidecode = "==1.0.23"
 urllib3 = "==1.22"
 virtualenv = "==15.1.0"
 virtualenv-clone = "==0.2.6"
 whitenoise = "==3.3.1"
+google-cloud-language = "*"
 
 
 [dev-packages]
