--- a/Pipfile
+++ b/Pipfile
@@ -36,7 +36,6 @@ pyflakes = "==1.6.0"
 python-dateutil = "==2.6.1"
 python-http-client = "==3.2.6"
 pytz = "==2018.3"
-pyyaml = "==3.12"
 requests = "==2.18.4"
 rsa = "==3.4.2"
 s3transfer = "==0.3.3"
@@ -50,6 +49,7 @@ virtualenv-clone = "==0.2.6"
 whitenoise = "==3.3.1"
 google-cloud-language = "*"
 psycopg2 = "*"
+pyyaml = "*"
 
 
 [dev-packages]
