--- a/Pipfile
+++ b/Pipfile
@@ -50,6 +50,7 @@ whitenoise = "==3.3.1"
 google-cloud-language = "*"
 pyyaml = "*"
 psycopg2 = "==2.8.6"
+django-background-tasks = "*"
 
 
 [dev-packages]
