adding selenium again

--- a/Pipfile
+++ b/Pipfile
@@ -39,7 +39,7 @@ pytz = "==2018.3"
 requests = "==2.18.4"
 rsa = "==3.4.2"
 s3transfer = "==0.3.3"
-selenium = "==3.14.0"
+selenium = "*"
 sendgrid = "==6.2.0"
 shortuuid = "==0.5.0"
 unidecode = "==1.0.23"
