--- a/Pipfile
+++ b/Pipfile
@@ -24,7 +24,7 @@ django-storages = "==1.6.5"
 docutils = "==0.14"
 flake8 = "==3.5.0"
 future = "==0.18.2"
-gunicorn = "==19.7.1"
+gunicorn = "*"
 idna = "==2.6"
 jmespath = "==0.9.3"
 mccabe = "==0.6.1"
