--- a/Pipfile
+++ b/Pipfile
@@ -33,7 +33,7 @@ pillow = "==5.0.0"
 pipenv = "==9.1.0"
 pycodestyle = "==2.3.1"
 pyflakes = "==1.6.0"
-python-dateutil = "==2.6.1"
+python-dateutil = "*"
 python-http-client = "==3.2.6"
 pytz = "==2018.3"
 requests = "==2.18.4"
@@ -50,12 +50,11 @@ google-cloud-language = "*"
 pyyaml = "*"
 psycopg2 = "==2.8.6"
 django-background-tasks = "*"
-undetected-chromedriver = "*"
-selenium = "==4.1.5"
 nltk = "*"
 pandas = "*"
 django-rq = "*"
 google-cloud-vision = "*"
+selenium = "==2.53.6"
 
 
 [dev-packages]
