--- a/Pipfile
+++ b/Pipfile
@@ -1,12 +1,9 @@
 [[source]]
-
 url = "https://pypi.python.org/simple"
 verify_ssl = true
 name = "pypi"
 
-
 [packages]
-
 awscli = "==1.18.24"
 boto3 = "==1.12.24"
 botocore = "==1.15.24"
@@ -24,7 +21,7 @@ django-storages = "==1.6.5"
 docutils = "==0.14"
 flake8 = "==3.5.0"
 future = "==0.18.2"
-gunicorn = "*"
+gunicorn = "==20.1.0"
 idna = "==2.6"
 jmespath = "==0.9.3"
 mccabe = "==0.6.1"
@@ -56,6 +53,4 @@ django-rq = "*"
 google-cloud-vision = "*"
 selenium = "==2.53.6"
 
-
 [dev-packages]
-
