removing ohio region from render.yaml

--- a/render.yaml
+++ b/render.yaml
@@ -5,6 +5,7 @@ services:
   - type: worker
     name: queue
     env: python
+    region: oregon
     buildCommand: "pipenv install"
     startCommand: "celery -A mydidata worker -l info --concurrency 4"
     autoDeploy: false
@@ -70,6 +71,7 @@ services:
           property: connectionString
   - type: redis
     name: celery-redis
+    region: oregon
     plan: starter # we choose a plan with persistence to ensure tasks are not lost upon restart
     maxmemoryPolicy: noeviction # recommended policy for queues
     ipAllowList: [] # only allow internal connections    
