--- a/render.yaml
+++ b/render.yaml
@@ -22,7 +22,7 @@ services:
     dockerfilePath: Dockerfile.render
     plan: starter # optional; defaults to starter
     numInstances: 1
-    prebuild:
+    preBuild:
     - apt-get update
     - apt-get install -y wget
     - wget https://dl.google.com/linux/direct/google-chrome-stable_current_amd64.deb
